syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Tasco.ProjectService.Service.Protos";


package subtask;

service SubTaskService {
  rpc CreateSubTask (SubTaskRequest) returns (SubTaskResponse);
  rpc DeleteSubTask (SubTaskRequestById) returns (google.protobuf.Empty);
  rpc GetSubTaskById (SubTaskRequestById) returns (SubTaskResponse);
  rpc UpdateSubTask (UpdateSubTaskRequest) returns (SubTaskResponse);
  rpc GetSubTasksByTaskObjectiveId (SubTaskRequestByTaskObjectiveId) returns (SubTaskListResponse);
  rpc CompleteSubTask (CompleteSubTaskRequest) returns (SubTaskResponse);
  rpc AssignSubTask (AssignSubTaskRequest) returns (SubTaskResponse);
}

// Request messages
message SubTaskRequest {
  string parent_task_id = 1;
  string title = 2;
  string description = 3;
  string assignee_id = 4;
  string assignee_name = 5;
  string status = 6;
}

message SubTaskRequestById {
  string id = 1;
}

message SubTaskRequestByTaskObjectiveId {
  string parent_task_id = 1;
  int32 page_size = 2;
  int32 page_index = 3;
}

message UpdateSubTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message CompleteSubTaskRequest {
  string id = 1;
  bool is_completed = 2;
}

message AssignSubTaskRequest {
  string id = 1;
  string assignee_id = 2;
  string assignee_name = 3;
}

// Response messages
message SubTaskResponse {
  string id = 1;
  string parent_task_id = 2;
  string title = 3;
  string description = 4;
  string assignee_id = 5;
  string assignee_name = 6;
  string status = 7;
  string created_date = 8;
  string completed_date = 9;
  bool is_deleted = 10;
}

message SubTaskListResponse {
  repeated SubTaskResponse sub_tasks = 1;
  int32 total_count = 2;
  int32 page_count = 3;
  int32 current_page = 4;
} 